--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admin_thealim",
+  "name": "thealime",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,11 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "0.26.0",
+    "@popperjs/core": "2.11.2",
+    "axios": "0.25.0",
+    "bootstrap": "5.1.3",
     "core-js": "^3.6.5",
-    "iconv-lite": "0.6.3",
+    "cors": "2.8.5",
+    "socket.io": "4.4.1",
     "vue": "^3.0.0",
-    "vue-datepicker-next": "1.0.2",
+    "vue-axios-cors": "1.0.1",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
