--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "^3.0.0",
     "vue-axios-cors": "1.0.1",
     "vue-color-kit": "1.0.5",
+    "vue-cookie-next": "1.3.0",
     "vue-datepicker-next": "1.0.2",
     "vue-long-click": "0.1.0",
     "vue-router": "^4.0.0-0",
