--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "2.8.5",
     "dayjs": "1.11.0",
     "express-session": "1.17.2",
+    "pulltorefreshjs": "0.1.22",
     "socket.io": "4.4.1",
     "vue": "^3.0.0",
     "vue-axios-cors": "1.0.1",
