--- a/package.json
+++ b/package.json
@@ -10,22 +10,33 @@
   "dependencies": {
     "@ckpack/vue-color": "1.1.8",
     "@popperjs/core": "2.11.2",
+    "@splidejs/vue-splide": "0.6.7",
     "axios": "0.25.0",
-    "bootstrap": "5.1.3",
+    "bootstrap": "5.2.0",
+    "bootstrap-vue-3": "0.1.21",
+    "clipboard": "2.0.11",
     "core-js": "^3.6.5",
     "core-js-compat": "3.4.7",
-    "cors": "2.8.5",
     "dayjs": "1.11.0",
     "express-session": "1.17.2",
+    "firebase": "9.9.1",
     "pulltorefreshjs": "0.1.22",
     "socket.io": "4.4.1",
-    "vue": "^3.0.0",
+    "vue": "3.2.37",
+    "vue-apple-login": "1.0.0",
     "vue-axios-cors": "1.0.1",
     "vue-color-kit": "1.0.5",
     "vue-cookie-next": "1.3.0",
+    "vue-cropperjs": "5.0.0",
     "vue-datepicker-next": "1.0.2",
+    "vue-draggable-next": "2.1.1",
+    "vue-easy-lightbox": "1.8.2",
+    "vue-fetch": "1.1.3",
     "vue-long-click": "0.1.0",
+    "vue-meta": "2.4.0",
     "vue-router": "^4.0.0-0",
+    "vue-simple-progress": "1.1.1",
+    "vue-zoomer": "0.3.10",
     "vuex": "^4.0.0-0",
     "webpack": "4.46.0"
   },
@@ -63,5 +74,6 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "proxy": "http://192.168.0.22:8080"
 }
