--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "bootstrap": "5.1.3",
     "bootstrap-vue-3": "^0.1.21",
     "browser-image-compression": "^2.0.0",
+    "buffer": "6.0.3",
     "core-js": "^3.6.5",
     "core-js-compat": "3.4.7",
     "cors": "2.8.5",
     "cropperjs": "^1.5.12",
     "dayjs": "1.11.0",
     "express-session": "1.17.2",
-    "firebase": "^9.9.1",
+    "firebase": "9.9.0",
+    "module": "1.2.5",
     "postcss-load-config": "^4.0.1",
     "pulltorefreshjs": "^0.1.22",
+    "sass": "1.56.1",
     "socket.io": "4.4.1",
     "vue": "^3.0.0",
     "vue-axios-cors": "1.0.1",
@@ -54,7 +57,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "sass-loader": "7.3.1"
   },
   "eslintConfig": {
     "root": true,
