--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "thealime",
-  "version": "0.1.0",
+  "version": "0.1.4",
   "private": true,
+  "homepage": ".",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -11,6 +12,7 @@
     "@ckpack/vue-color": "1.1.8",
     "@popperjs/core": "2.11.2",
     "@splidejs/vue-splide": "^0.6.7",
+    "@vue/cli-plugin-pwa": "4.5.9",
     "axios": "0.25.0",
     "bootstrap": "5.1.3",
     "bootstrap-vue-3": "^0.1.21",
@@ -24,8 +26,11 @@
     "express-session": "1.17.2",
     "firebase": "9.9.0",
     "module": "1.2.5",
+    "photoswipe": "5.3.4",
     "postcss-load-config": "^4.0.1",
     "pulltorefreshjs": "^0.1.22",
+    "readline": "1.3.0",
+    "register-service-worker": "1.7.2",
     "sass": "1.56.1",
     "socket.io": "4.4.1",
     "vue": "^3.0.0",
@@ -39,9 +44,10 @@
     "vue-fetch": "^1.1.3",
     "vue-long-click": "0.1.0",
     "vue-router": "^4.0.0-0",
+    "vue3-simple-html2pdf": "0.0.7",
     "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.1.0",
-    "webpack": "4.46.0"
+    "webpack": "4.20.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
