--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ckpack/vue-color": "1.1.8",
+    "@intlify/vue-i18n-loader": "4.2.0",
     "@popperjs/core": "2.11.2",
     "@splidejs/vue-splide": "^0.6.7",
     "@vue/cli-plugin-pwa": "4.5.9",
@@ -42,6 +43,7 @@
     "vue-draggable-next": "^2.1.1",
     "vue-easy-lightbox": "^1.8.2",
     "vue-fetch": "^1.1.3",
+    "vue-i18n": "9",
     "vue-long-click": "0.1.0",
     "vue-router": "^4.0.0-0",
     "vue3-simple-html2pdf": "0.0.7",
