--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js-compat": "3.4.7",
     "cors": "2.8.5",
     "cropperjs": "^1.5.12",
+    "crypto-js": "^4.1.1",
     "dayjs": "1.11.0",
     "express-session": "1.17.2",
     "firebase": "9.9.0",
@@ -41,7 +42,6 @@
     "vue-cropperjs": "^5.0.0",
     "vue-datepicker-next": "1.0.2",
     "vue-draggable-next": "^2.1.1",
-    "vue-easy-lightbox": "^1.8.2",
     "vue-fetch": "^1.1.3",
     "vue-i18n": "9",
     "vue-long-click": "0.1.0",
@@ -52,7 +52,7 @@
     "webpack": "4.20.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
