--- a/package.json
+++ b/package.json
@@ -86,5 +86,9 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "packageManager": "yarn@3.6.3",
+  "resolutions": {
+    "@intlify/core-base@9.4.0": "patch:@intlify/core-base@npm%3A9.4.0#./.yarn/patches/@intlify-core-base-npm-9.4.0-4f05f5aa01.patch"
+  }
 }
