--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@ckpack/vue-color": "1.1.8",
     "@intlify/vue-i18n-loader": "4.2.0",
-    "@popperjs/core": "2.11.2",
+    "@popperjs/core": "^2.11.8",
     "@splidejs/vue-splide": "^0.6.7",
     "@vue/cli-plugin-pwa": "4.5.9",
     "axios": "0.25.0",
@@ -24,8 +24,8 @@
     "cors": "2.8.5",
     "cropperjs": "^1.5.12",
     "crypto-js": "^4.1.1",
-    "dayjs": "1.11.0",
-    "express-session": "1.17.2",
+    "dayjs": "^1.11.9",
+    "express-session": "^1.17.3",
     "firebase": "9.9.0",
     "module": "1.2.5",
     "photoswipe": "5.3.4",
@@ -37,13 +37,13 @@
     "socket.io": "4.4.1",
     "vue": "^3.0.0",
     "vue-axios-cors": "1.0.1",
-    "vue-color-kit": "1.0.5",
+    "vue-color-kit": "^1.0.6",
     "vue-cookie-next": "1.3.0",
     "vue-cropperjs": "^5.0.0",
-    "vue-datepicker-next": "1.0.2",
+    "vue-datepicker-next": "^1.0.3",
     "vue-draggable-next": "^2.1.1",
     "vue-fetch": "^1.1.3",
-    "vue-i18n": "9",
+    "vue-i18n": "^9.4.1",
     "vue-long-click": "0.1.0",
     "vue-router": "^4.0.0-0",
     "vue3-simple-html2pdf": "0.0.7",
@@ -90,6 +90,6 @@
   ],
   "packageManager": "yarn@3.6.3",
   "resolutions": {
-    "@intlify/core-base@9.4.0": "patch:@intlify/core-base@npm%3A9.4.0#./.yarn/patches/@intlify-core-base-npm-9.4.0-4f05f5aa01.patch"
+    "@intlify/core-base@9.4.1": "patch:@intlify/core-base@npm%3A9.4.0#./.yarn/patches/@intlify-core-base-npm-9.4.0-4f05f5aa01.patch"
   }
 }
