--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@ckpack/vue-color": "1.1.8",
+    "@ckpack/vue-color": "^1.5.0",
     "@intlify/vue-i18n-loader": "4.2.0",
     "@popperjs/core": "^2.11.8",
     "@splidejs/vue-splide": "^0.6.7",
     "@vue/cli-plugin-pwa": "4.5.9",
     "axios": "0.25.0",
-    "bootstrap": "5.1.3",
+    "bootstrap": "^5.3.2",
     "bootstrap-vue-3": "^0.1.21",
     "browser-image-compression": "^2.0.0",
     "buffer": "6.0.3",
     "core-js": "^3.6.5",
-    "core-js-compat": "3.4.7",
+    "core-js-compat": "^3.32.2",
     "cors": "2.8.5",
     "cropperjs": "^1.5.12",
     "crypto-js": "^4.1.1",
@@ -28,13 +28,13 @@
     "express-session": "^1.17.3",
     "firebase": "9.9.0",
     "module": "1.2.5",
-    "photoswipe": "5.3.4",
+    "photoswipe": "^5.4.0",
     "postcss-load-config": "^4.0.1",
     "pulltorefreshjs": "^0.1.22",
     "readline": "1.3.0",
     "register-service-worker": "1.7.2",
-    "sass": "1.56.1",
-    "socket.io": "4.4.1",
+    "sass": "^1.67.0",
+    "socket.io": "^4.7.2",
     "vue": "^3.0.0",
     "vue-axios-cors": "1.0.1",
     "vue-color-kit": "^1.0.6",
