--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@popperjs/core": "^2.11.8",
     "@splidejs/vue-splide": "^0.6.7",
     "@vue/cli-plugin-pwa": "4.5.9",
-    "axios": "0.25.0",
+    "axios": "1.5.0",
     "bootstrap": "^5.3.2",
-    "bootstrap-vue-3": "^0.1.21",
+    "bootstrap-vue-3": "^0.5.1",
     "browser-image-compression": "^2.0.0",
     "buffer": "6.0.3",
     "core-js": "^3.6.5",
@@ -42,14 +42,13 @@
     "vue-cropperjs": "^5.0.0",
     "vue-datepicker-next": "^1.0.3",
     "vue-draggable-next": "^2.1.1",
-    "vue-fetch": "^1.1.3",
+    "vue-fetch": "^2.0.0",
     "vue-i18n": "^9.4.1",
     "vue-long-click": "0.1.0",
     "vue-router": "^4.0.0-0",
     "vue3-simple-html2pdf": "0.0.7",
     "vuex": "^4.0.2",
-    "vuex-persistedstate": "^4.1.0",
-    "webpack": "4.20.2"
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -67,7 +66,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
-    "sass-loader": "7.3.1"
+    "sass-loader": "7.3.1",
+    "webpack": "4.20.2"
   },
   "eslintConfig": {
     "root": true,
