--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap-vue-3": "^0.5.1",
     "browser-image-compression": "^2.0.0",
     "buffer": "6.0.3",
+    "clipboard": "^2.0.11",
     "core-js": "^3.6.5",
     "core-js-compat": "^3.32.2",
     "cors": "2.8.5",
