--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "space-before-function-paren": "off"
+      "space-before-function-paren": 0
     }
   },
   "browserslist": [
