--- a/public/MZ_appInitailizer.json
+++ b/public/MZ_appInitailizer.json
@@ -1,7 +1,11 @@
 {
-  "D": 
+  "app": {
+    "D": 
     {
       "appType": "D",
+      "appToken": "ABC",
+      "appKey": 0,
+      "lastUpdate": "2023-01-02",
       "appName": "더알림",
       "appDomain": "https://mo.d-alim.com",
       "defaultLang": "ko",
@@ -19,11 +23,12 @@
         "appId": "1:777053173385:web:0de7347501346c761d3858",
         "measurementId": "G-0BYBFKL8TS"
       }
-      
     },
   "UB": 
     {
       "appType": "UB",
+      "appKey": 1,
+      "lastUpdate": "2023-01-02",
       "appName": "Unibuzzy",
       "appDomain": "https://unibuzzy.com",
       "defaultLang": "en",
@@ -40,8 +45,8 @@
         "messagingSenderId": "947851330767",
         "appId": "1:947851330767:web:de8bc42cf920be3ae563ba"
       }
-      
     }
+  }
 
 }
   
