chaned '더알림' / 'theAlim'

--- a/public/MZ_appInitailizer.json
+++ b/public/MZ_appInitailizer.json
@@ -6,7 +6,7 @@
       "appToken": "ABC",
       "appKey": 0,
       "lastUpdate": "2023-01-02",
-      "appName": "더알림",
+      "appName": "모두조인",
       "appDomain": "https://mo.d-alim.com",
       "defaultLang": "ko",
       "savePhone": true,
