--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "더알림",
-    "name": "구독형 알림, 더알림",
+    "short_name": "모두조인",
+    "name": "구독형 알림, 모두조인",
     "id": "/",
     "icons": [
 			{
