change moduzoin -> hybric

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "모두조인",
-    "name": "구독형 알림, 모두조인",
+    "short_name": "하이브릭",
+    "name": "구독형 알림, 하이브릭",
     "id": "/",
     "icons": [
 			{
